Actualize RuboCop and to to v0.80.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,12 @@ inherit_from: .rubocop_todo.yml
 require:
   - rubocop-performance
   - rubocop-rails
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
