--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,6 @@
 inherit_from: .rubocop_todo.yml
 
-require:
-  - rubocop-performance
-  - rubocop-rails
+require: rubocop-performance
 
 Style/HashEachMethods:
   Enabled: true
